# spinescrews

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  defaults.yml  environment.yml  pyproject.toml
dicom_tools/: burn_screw_endpoints.py  convert_to_nii.py  survey_dicoms.py  survey_dicoms.sh
dicom_tools/HybridScrewPlanner/: HybridScrewPlanner.py  tests.txt
dicom_tools/tests/: test_burn_screw_endpoints.py  test_convert_to_nii.py  test_libigl_api.py  test_possible_levels_sync.py  test_survey_dicoms.py
sample/: preop_plan.csv
scripts/: construct_mesh_templates.py
slicer_tools/: burn_screw_endpoints.py
slicer_tools/HybridScrewPlanner/: HybridScrewPlanner.py
slicer_tools/tests/: test_burn_screw_endpoints.py  test_possible_levels_sync.py
src/spinescrews/: __init__.py
src/spinescrews/dicom_utils/: convert_to_nii.sh
src/spinescrews/figures/: CT_visualization.py  __init__.py  _detection_common.py  _plot_helpers.py  correspondence_match.py  correspondence_preprocess.py  detection_plan_vs_detected.py  detection_screws.py  group_statistics.py  orient_refinement.py  (+4 more)
vertebra_templates/labels/: C2  C3  C4  C5  C6  C7  body_walls.ply  canal.ply  common_labels.npz  inferior_endplate.ply  left_ped.ply  left_transverse.ply  right_ped.ply  right_transverse.ply  spinous_process.ply  superior_endplate.ply
vertebra_templates/meshes/: template_C2.ply  template_C3.ply  template_C4.ply  template_C5.ply  template_C6.ply  template_C7.ply  template_L1.ply  template_L2.ply  template_L3.ply  template_L4.ply  template_L5.ply  template_LS.ply  template_T1.ply  template_T10.ply  template_T11.ply  template_T12.ply  template_T2.ply  template_T3.ply  template_T4.ply  template_T5.ply  template_T6.ply  template_T7.ply  template_T8.ply  template_T9.ply
vertebra_templates/resnet_weights/: L1_w75_h25_g18.data-00000-of-00001  L1_w75_h25_g18.index  L2_w75_h25_g18.data-00000-of-00001  L2_w75_h25_g18.index  L3_w75_h25_g18.data-00000-of-00001  L3_w75_h25_g18.index  L4_w75_h25_g18.data-00000-of-00001  L4_w75_h25_g18.index  L5_w75_h25_g18.data-00000-of-00001  L5_w75_h25_g18.index  T10_w75_h25_g18.data-00000-of-00001  T10_w75_h25_g18.index  T11_w75_h25_g18.data-00000-of-00001  T11_w75_h25_g18.index  T12_w75_h25_g18.data-00000-of-00001  T12_w75_h25_g18.index  T1_w75_h25_g18.data-00000-of-00001  T1_w75_h25_g18.index  T2_w75_h25_g18.data-00000-of-00001  T2_w75_h25_g18.index  T3_w75_h25_g18.data-00000-of-00001  T3_w75_h25_g18.index  T4_w75_h25_g18.data-00000-of-00001  T4_w75_h25_g18.index  T5_w75_h25_g18.data-00000-of-00001  T5_w75_h25_g18.index  T6_w75_h25_g18.data-00000-of-00001  T6_w75_h25_g18.index  T7_w75_h25_g18.data-00000-of-00001  T7_w75_h25_g18.index  T8_w75_h25_g18.data-00000-of-00001  T8_w75_h25_g18.index  T9_w75_h25_g18.data-00000-of-00001  T9_w75_h25_g18.index  checkpoint
(+241 files in other folders)
