[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spinescrews"
version = "0.1.0"
description = "Pipeline for assessing pedicle screw placement accuracy in CT scans"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy", "scipy", "pandas",
    "scikit-learn", "scikit-image",
    "nibabel", "dipy",
    "libigl==2.5.1", "trimesh", "plyfile", "manifold3d",
    "shapely", "rtree",
    "matplotlib",
    "joblib", "pyyaml", "python-igraph",
    "bg3dtools[mesh,viz,graph]",
    "PyMaxflow",
]

[project.optional-dependencies]
fast = ["embreex"]
torch = ["bg3dtools[torch]"]
templates = ["tensorflow", "jax", "jaxlib"]

[project.scripts]
spinescrews-align = "spinescrews.pipeline.align_vertebrae:main"
spinescrews-preop = "spinescrews.pipeline.align_preop:main"
spinescrews-postop = "spinescrews.pipeline.register_postop:main"
spinescrews-accuracy = "spinescrews.pipeline.compute_accuracy:main"
spinescrews-segment = "spinescrews.pipeline.run_segmentation:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spinescrews*"]
