[build-system]
requires = ["setuptools>=77"]  # >=77 for PEP 639 SPDX license metadata
build-backend = "setuptools.build_meta"

[project]
name = "spinescrews"
version = "1.0.1"
description = "Pipeline for assessing pedicle screw placement accuracy in CT scans"
readme = "README.md"
requires-python = ">=3.10"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
# Upper bounds cap known-breaking next-majors (dipy 2.0 restructures the align
# API; trimesh 5 removes Scene.dump; numpy/pandas/scipy/skimage drop deprecated
# symbols). libigl is pinned exactly — 2.6.x silently breaks the igl API and has
# no Windows wheel (see dicom_tools/tests/test_libigl_api.py).
dependencies = [
    "numpy<3", "scipy<2", "pandas<3",
    "scikit-learn<2", "scikit-image<0.26",
    "nibabel<6", "dipy<2",
    "libigl==2.5.1", "trimesh<5", "plyfile", "manifold3d",
    "shapely<3", "rtree",
    "matplotlib<4",
    "joblib", "pyyaml", "python-igraph",
    "bg3dtools[mesh,viz,graph]",
]

[project.optional-dependencies]
fast = ["embreex"]
torch = ["bg3dtools[torch]"]
templates = ["tensorflow", "jax", "jaxlib"]

[project.scripts]
spinescrews-align = "spinescrews.pipeline.align_vertebrae:main"
spinescrews-preop = "spinescrews.pipeline.align_preop:main"
spinescrews-postop = "spinescrews.pipeline.register_postop:main"
spinescrews-accuracy = "spinescrews.pipeline.compute_accuracy:main"
spinescrews-segment = "spinescrews.pipeline.run_segmentation:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spinescrews*"]
